@@ -1,3 +1,9 @@
+2004-08-17  Alan Modra  <amodra@bigpond.net.au>
+
+	* elf64-ppc.c (struct ppc64_elf_obj_tdata): Add "deleted_section".
+	(adjust_opd_syms): Attach opd syms for deleted entries to one of
+	the sections that will be discarded.
+
 2004-08-16  Alan Modra  <amodra@bigpond.net.au>
 
 	* elflink.c (elf_section_complain_discarded): Ignore .fixup.
